--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.vladislavbalyuk.currencyconverter.V.MainActivity"
+    tools:context="com.vladislavbalyuk.currencyconverter.view.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragment"
-        android:name="com.vladislavbalyuk.currencyconverter.V.MainActivityFragment"
+        android:name="com.vladislavbalyuk.currencyconverter.view.MainActivityFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
