--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,47 +9,63 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_margin="@dimen/layout_margin">
             <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/TextSumFrom"
             android:inputType ="numberDecimal"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_size"
             android:hint="@string/text1"/>
     </android.support.design.widget.TextInputLayout>
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/layout_margin"
         android:id="@+id/SpinnerFrom">
     </Spinner>
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="40dp"
-        android:id="@+id/TextView1"
-        android:textColor="@color/colorControlNormal"
-        android:text ="@string/text2">
-    </TextView>
+        android:layout_margin="@dimen/layout_margin"
+        >
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignBottom="@+id/btnReplace"
+            android:paddingLeft="@dimen/text_padding"
+            android:id="@+id/TextView1"
+            android:textColor="@color/colorControlNormal"
+            android:text ="@string/text2">
+        </TextView>
+        <ImageButton
+            android:layout_width="@dimen/button_size"
+            android:layout_height="64dp"
+            android:id="@+id/btnReplace"
+            android:background="@color/colorBackground"
+            android:src="@drawable/ic_cached_black_44dp"
+            android:layout_centerInParent="true"
+            />
+
+    </RelativeLayout>
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/layout_margin"
         android:id="@+id/SpinnerIn">
     </Spinner>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginLeft="@dimen/layout_margin"
+        android:layout_marginTop="@dimen/separator_height"
         android:id="@+id/TextView2"
         android:textColor="@color/colorControlNormal"
         android:text="@string/text3">
@@ -58,10 +74,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:textSize="20sp"
+        android:layout_margin="@dimen/layout_margin"
+        android:paddingLeft="@dimen/text_padding"
+        android:textSize="@dimen/text_size"
         android:id="@+id/TextResult">
     </TextView>
 
 </LinearLayout>
-
