--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.vladislavbalyuk.currencyconverter.V.MainActivity">
+    tools:context="com.vladislavbalyuk.currencyconverter.view.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_values"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_values"
         app:showAsAction="never" />
 </menu>
