--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,13 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="item_height">50dp</dimen>
+    <dimen name="separator_height">40dp</dimen>
+    <dimen name="layout_margin">10dp</dimen>
+    <dimen name="text_padding">5dp</dimen>
+    <dimen name="text_size">20sp</dimen>
+    <dimen name="image_size">30dp</dimen>
+    <dimen name="button_size">64dp</dimen>
+    <dimen name="charcode_width">50dp</dimen>
+    <dimen name="name_width">200dp</dimen>
+    <dimen name="value_width">100dp</dimen>
 </resources>
