--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,9 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <item name="colorControlNormal">#009688</item>
+        <item name="colorControlNormal">@color/colorControlNormal</item>
 
-        <item name="colorControlActivated">#009688</item>
+        <item name="colorControlActivated">@color/colorControlNormal</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
